# Final-Project-Control-Motor-System-PMSM

./: CMakeLists.txt  IPMSM.c  IPMSM.mexw64  README.md  RFOC.c  RFOC.mexw64  RNN_MTPA_lib.h  SVPWM.c  SVPWM.mexw64  Speed_CTRL.cpp  Speed_CTRL.mexw64  delete_mex_file.cmake  kill_matlab.cmake  test_eigen.cpp  untitled.slx  untitled.slx.autosave  untitled.slx.original
Final Project/: IPMSM.mexw64  Tugas_Akhir.slx
